--- a/References.bib
+++ b/References.bib
@@ -33,7 +33,7 @@
 @article{bergsten2012effect,
   title={The effect of geographical scale of sampling on {DNA} barcoding},
   author={Bergsten, J and Bilton, DT and Fujisawa, T and Elliott, M and Monaghan, MT and Balke, M and Hendrich, L and Geijer, J and Herrmann, J and Foster, GN and Ribera, I and Nilsson, AN and Barraclough, TG and Vogler, AP},
-  journal={Systematic biology},
+  journal={Systematic Biology},
   volume={61},
   number={5},
   pages={851-869},
@@ -43,7 +43,7 @@
 }
 
 @article{candek2015dna,
-author = {\u{C}andek, Klemen and Kuntner, Matjaž},
+author = {{\u{C}}andek, Klemen and Kuntner, Matjaž},
 title = {{DNA} barcoding gap: {R}eliable species identification over morphological and geographical scales},
 journal = {Molecular Ecology Resources},
 volume = {15},
@@ -369,6 +369,18 @@ doi = {10.1007/978-1-0716-3581-0_24},
   volume = {164},
   pages = {1645--1656}
 }
+
+@article{rannala2015art,
+  author = {Rannala, B},
+  title = {The art and science of species delimitation},
+  journal = {Current Zoology},
+  volume = {61},
+  number = {5},
+  pages = {846--853},
+  year = {2015},
+  doi = {10.1093/czoolo/61.5.846}
+}
+
 
 @article{ratnasingham2007bold,
   title={{BOLD}: {T}he {B}arcode of {L}ife {D}ata {S}ystem (http://www. barcodinglife. org)},
