--- a/References.bib
+++ b/References.bib
@@ -9,6 +9,18 @@
   url       = {https://doi.org/10.2307/2685469}
 }
 
+@article{ahrens2016rarity,
+  author = {Ahrens, D and Fujisawa, F and Krammer, H-J and Eberle, J and Fabrizi, S and Vogler, AP},
+  title = {Rarity and Incomplete Sampling in {DNA}-Based Species Delimitation},
+  journal = {Systematic Biology},
+  volume = {65},
+  number = {3},
+  pages = {478--494},
+  year = {2016},
+  doi = {10.1093/sysbio/syw002}
+}
+
+
 @article{avise1987intraspecific,
   author = {Avise, JC and Arnold, J and Ball, Jr., RM and Bermingham, E and Lamb, T and Neigel, JE and Reeb, CA and Saunders, NC},
   title = {Intraspecific Phylogeography: The Mitochondrial {DNA} Bridge Between Population Genetics and Systematics},
@@ -244,8 +256,19 @@ doi = {https://doi.org/10.1046/j.1365-294X.2002.01410.x},
 year = {2002}
 }
 
+@article{kullback1951information,
+  author    = {Kullback, S. and Leibler, RA},
+  title     = {On Information and Sufficiency},
+  journal   = {Annals of Mathematical Statistics},
+  volume    = {22},
+  number    = {1},
+  pages     = {79--86},
+  year      = {1951}
+}
+
+
 @article{liu2015simulation,
-  author       = {Liu, Yuhong and Gelman, Andrew and Zheng, Tian},
+  author       = {Liu, Y and Gelman, A and Zheng, T},
   title        = {Simulation-efficient shortest probability intervals},
   journal      = {Statistical Computing},
   volume       = {25},
