--- a/BayesianDNABarcodeGap.tex
+++ b/BayesianDNABarcodeGap.tex
@@ -199,7 +199,7 @@ After sampling, a number of summary quantities were reported, including posterio
 
 \section{Results and Discussion}
 
-The \textit{Agabus} CYTB dataset analyzed by \citet{phillips2024measure} is revisited herein. \\ \textcolor{red}{Briefly, using the R package {\tt MACER} \cite{young2021macer}, DNA sequences were downloaded from GenBank and BOLD and processedto obtain a 343 bp FASTA alignment representing 46 unique haplotypes. Genetc distances were calculated using uncorrected p-distances.} Specifically, the proposed Bayesian model is demonstrated on the species \textit{A. bipustulatus} and \textit{A. nevadensis}, since these taxa were the sole representatives for this locus, with the most and the least specimen records, respectively ($N$ = 701 and $N$ = 2) across all three assessed molecular markers. Note, DNA barcode gap estimation is only possible for species having at least two specimen records. This dataset is a prime illustrative example highlighting the issue of inadequate taxon sampling, which arises frequently in large-scale phylogenetic and phylogeographic studies, in several respects. First, from a statistical viewpoint, sample sizes reflect extremes in reliable parameter estimation. Second, from a DNA barcoding perspective, \textit{Agabus} comprises about 200 extant species according to the Global Biodiversity Information Facility (GBIF) (https://www.gbif.org); yet, due to the level of convenience sampling inherent in taxonomic collection efforts for this genus, adequate representation of species and genetic diversity is far from complete. 
+The \textit{Agabus} CYTB dataset analyzed by \citet{phillips2024measure} is revisited herein. \\ \textcolor{red}{Briefly, using the R package {\tt MACER} \cite{young2021macer}, DNA sequences were downloaded from GenBank and BOLD and processedto obtain a 343 bp FASTA alignment representing 46 unique haplotypes. Genetc distances were calculated using uncorrected p-distances.} Specifically, the proposed Bayesian model is demonstrated on the species \textit{A. bipustulatus} and \textit{A. nevadensis}, since these taxa were the sole representatives for this locus, with the most and the least specimen records, respectively ($N$ = 701 and $N$ = 2) across all three assessed molecular markers. \textcolor{red}{Further, \textit{A. bipustulatus} comprised 46 total haplotypes, whereas \textit{A. nevadensis} possessed two haplotypes.} Note, DNA barcode gap estimation is only possible for species having at least two specimen records. This dataset is a prime illustrative example highlighting the issue of inadequate taxon sampling, which arises frequently in large-scale phylogenetic and phylogeographic studies, in several respects. First, from a statistical \\ viewpoint, sample sizes reflect extremes in reliable parameter estimation. Second, from a DNA barcoding perspective, \textit{Agabus} comprises about 200 extant species according to the Global Biodiversity Information Facility (GBIF) (https://www.gbif.org); yet, due to the level of convenience sampling inherent in taxonomic collection efforts for this genus, adequate representation of species and genetic diversity is far from complete. 
 
 MCMC parameter traceplots showed rapid mixing of chains to the stationary distribution (\textbf{Supplementary Figure 1}). Further, all $\hat{R}$ and ESS values (not shown) were close to their recommended cutoffs of one and thousands of samples, respectively, indicating chains are both well-mixed and have converged to the posterior distribution.  
 
