--- a/References.bib
+++ b/References.bib
@@ -109,6 +109,17 @@ doi = {https://doi.org/10.1111/j.2517-6161.1977.tb01600.x},
 year = {1977}
 }
 
+@article{flouri2018species,
+  author = {Tomáš Flouri and Xiyun Jiao and Bruce Rannala and Ziheng Yang},
+  title = {Species Tree Inference with {BPP} Using Genomic Sequences and the Multispecies Coalescent},
+  journal = {Molecular Biology and Evolution},
+  volume = {35},
+  number = {10},
+  pages = {2585--2593},
+  year = {2018},
+  doi = {10.1093/molbev/msy147}
+}
+
 
 @book{gelman2014bayesian,
   author = {Gelman, A and Carlin, JB. and Stern, HS. and Duncan, DB and Vehtari, A and Rubin, DB},
